--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<div>hello</div>
+<!DOCTYPE html>
+<html lang="en">
+    <style></style>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
