--- a/index.html
+++ b/index.html
@@ -16,8 +16,17 @@
   <div class="profile-card">
     <!-- Profile Image -->
     <div class="image">
-      <img src="profile.jpg" alt="Profile Image" class="profile-img" />
+      <img src="لوجو نادي المتطوعين.jpg" alt="Profile Image" class="profile-img" />
     </div>
+
+    <div class="before">
+      <img src="Adige-flag.jpg" alt="before" class="before" />
+    </div>
+
+    <div class="container">
+      <img src="Adige-flag.jpg" alt="Image 1" class="before">
+      <img src="لوجو نادي المتطوعين.jpg" alt="Image 2" class="image">
+  </div>  
 
     <!-- Profile Details -->
     <div class="text-data">
