--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="profile-card">
     <!-- Profile Image -->
     <div class="image">
-      <img src="لوجو نادي المتطوعين.jpg" alt="Profile Image" class="profile-img" />
+      <img src="adiga volunteer Club logo.jpg" alt="Profile Image" class="profile-img" />
     </div>
 
     <div class="before">
@@ -25,13 +25,13 @@
 
     <div class="container">
       <img src="Adige-flag.jpg" alt="Image 1" class="before">
-      <img src="لوجو نادي المتطوعين.jpg" alt="Image 2" class="image">
+      <img src="adiga volunteer Club logo.jpg" alt="Image 2" class="image">
   </div>  
 
     <!-- Profile Details -->
     <div class="text-data">
-      <span class="name">CodingLab</span>
-      <span class="job">YouTuber & Blogger</span>
+      <span class="name">Adiga Volunteer Club</span>
+      <span class="job">Circassian Volunteer</span>
     </div>
 
     <!-- Social Icons -->
@@ -39,14 +39,11 @@
       <a href="#" style="background: #4267b2" class="link">
         <i class="bx bxl-facebook"></i>
       </a>
-      <a href="#" style="background: #1da1f2" class="link">
-        <i class="bx bxl-twitter"></i>
-      </a>
       <a href="#" style="background: #e1306c" class="link">
         <i class="bx bxl-instagram"></i>
       </a>
-      <a href="#" style="background: #ff0000" class="link">
-        <i class="bx bxl-youtube"></i>
+      <a href="#" style="background: #00e90c" class="link">
+        <i class='bx bxl-whatsapp'></i>
       </a>
     </div>
 
