--- a/index.html
+++ b/index.html
@@ -45,15 +45,18 @@
       <a href="#" style="background: #00e90c" class="link">
         <i class='bx bxl-whatsapp'></i>
       </a>
+      <a href="#" style="background: #e90000" class="link">
+        <i class='bx bx-map' ></i>
+      </a>
     </div>
 
     <!-- Subscribe and Message Buttons -->
     <div class="buttons">
-      <button class="button">Subscribe</button>
-      <button class="button">Message</button>
+      <button class="button">About us</button>
+      <button class="button">Join us</button>
     </div>
 
-    <!-- Analytics -->
+    <!-- Analytics --><!--
     <div class="analytics">
       <div class="data">
         <i class="bx bx-heart"></i>
@@ -67,7 +70,7 @@
         <i class="bx bx-share"></i>
         <span class="number">12k</span>
       </div>
-    </div>
+    </div>-->
   </div>
 </body>
 
