--- a/index.html
+++ b/index.html
@@ -36,17 +36,20 @@
 
     <!-- Social Icons -->
     <div class="media-buttons">
-      <a href="#" style="background: #4267b2" class="link">
+      <a href="https://www.facebook.com/profile.php?id=100071192890839" style="background: #4267b2" class="link">
         <i class="bx bxl-facebook"></i>
       </a>
-      <a href="#" style="background: #e1306c" class="link">
+      <a href="https://www.instagram.com/adiga_volunteers_club/" style="background: #e1306c" class="link">
         <i class="bx bxl-instagram"></i>
       </a>
-      <a href="#" style="background: #00e90c" class="link">
+      <a href="https://web.whatsapp.com/" style="background: #00e90c" class="link">
         <i class='bx bxl-whatsapp'></i>
       </a>
-      <a href="#" style="background: #e90000" class="link">
+      <a href="https://www.google.com/maps/place/%D8%A7%D9%84%D8%AC%D9%85%D8%B9%D9%8A%D8%A9+%D8%A7%D9%84%D8%AE%D9%8A%D8%B1%D9%8A%D8%A9+%D8%A7%D9%84%D8%B4%D8%B1%D9%83%D8%B3%D9%8A%D8%A9%E2%80%AD/@31.9622724,35.8533482,161m/data=!3m1!1e3!4m6!3m5!1s0x151ca10c67423249:0x235f379589389051!8m2!3d31.9620778!4d35.8529501!16s%2Fg%2F11c586yh3h?authuser=0&entry=ttu&g_ep=EgoyMDI0MTIwMS4xIKXMDSoASAFQAw%3D%3D" style="background: #e90000" class="link">
         <i class='bx bx-map' ></i>
+      </a>
+      <a href="https://discord.gg/szUPpd9x" style="background: #2300e9" class="link">
+        <i class='bx bxl-discord-alt'></i>
       </a>
     </div>
 
