--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </a>
     </div>
 
-    <!-- Subscribe and Message Buttons -->
+    <!-- About us and Join us Buttons -->
     <div class="buttons">
       <button class="button">About us</button>
       <button class="button">Join us</button>
